Add unfollow user api. #14
